--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "gitbook-plugin-edit-link": "^2.0.2",
+    "gitbook-plugin-ga": "^1.0.1",
     "gitbook-plugin-prism": "^2.3.0",
     "gitbook-plugin-scripts": "^1.0.2",
     "gitbook-plugin-signature": "^1.5.2"
